src/main/deploy/kustomize/base/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sip-phone
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      containers:
      - name: sip-phone
        image: ZAI_COMMUNICATOR
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 30
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 0
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 1
        resources:
          requests:
            memory: 16Mi
            cpu: 20m
          limits:
            memory: 16Mi
            cpu: 100m
      imagePullSecrets:
      - name: zailab.registry
