src/main/deploy/kustomize/base/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sip-phone
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
