src/main/deploy/kustomize/base/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sip-phone
spec:
  ingressClassName: nginx
  rules:
  - host: sip-phone.k8s
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sip-phone
            port: 
              name: http
